# InterVox-AI

./: README.md
Backend/: .env.example  app.py  main.py  pyproject.toml  requirement.txt  requirements.txt  schemas.py
Backend/content/: job_description.txt  resume.txt
Backend/routes/: evaluate.py  interview.py  resume.py
Backend/services/: evaluator.py  evaluator_prompt.py  file_parser.py  generator.py  interview_summary.py  interviewer.py  llm.py  prompt.py  resume_advisor.py  resume_analysis.py  resume_parser.py  scorer.py  stt.py  tts.py  voice.py
Backend/utils/: helpers.py
Frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs
Frontend/src/: App.jsx  api.js  index.css  main.jsx
Frontend/src/components/: AppShell.jsx  Evaluation.jsx  FileDropCard.jsx  Interview.jsx  ResumeInsights.jsx  ResumeUpload.jsx  ScoreSummary.jsx  SectionCard.jsx  VoiceRecorder.jsx
Frontend/src/context/: InterviewContext.jsx  useInterview.js
Frontend/src/pages/: AnalysisPage.jsx  HomePage.jsx  InterviewPage.jsx  ResultsPage.jsx
