[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "faster-whisper>=1.2.1",
    "groq>=1.1.2",
    "gtts>=2.5.4",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.14",
    "uvicorn>=0.42.0",
    "whisper>=1.1.10",
]
