[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "gtts>=2.5.4",
    "langchain>=0.2.3",
    "langchain-core==0.2.0",
    "langchain-groq==0.1.4",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "python-dotenv==1.0.1",
    "pyttsx3>=2.99",
    "speechrecognition>=3.16.0",
    "uvicorn>=0.45.0",
]
